# Doodle-Jump

./: .gitignore  CMakeLists.txt
additionalPrograms/: CMakeLists.txt
additionalPrograms/DoodleParamsGetter/: CMakeLists.txt  main.cpp
additionalPrograms/LevelEditor/: CMakeLists.txt  main.cpp
common/: CMakeLists.txt
common/src/common/: DebugImGui.cpp  DebugImGui.hpp  GameStuff.cpp  GameStuff.hpp  Previews.cpp  Previews.hpp  Resources.cpp  Resources.hpp  Returners.cpp  Returners.hpp  Utils.cpp  Utils.hpp
config/: CMakeLists.txt
config/src/config/: DoodleJumpConfig.hpp.in
drawables/: CMakeLists.txt
drawables/src/drawables/: ImageBackground.cpp  ImageBackground.hpp  Scene.cpp  Scene.hpp
gameObjects/: CMakeLists.txt
gameObjects/src/gameObjects/: Doodle.cpp  Doodle.hpp  Items.cpp  Items.hpp  Monsters.cpp  Monsters.hpp  Tiles.cpp  Tiles.hpp
level/: CMakeLists.txt
level/src/level/: Level.cpp  Level.hpp  LevelGenerator.cpp  LevelGenerator.hpp
main/: CMakeLists.txt  main.cpp
resources/: level.json
resources/Levels/: level0.json
resources/Saved generations and returners/: NormalGeneration.json
